--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -234,3 +234,16 @@
         }
     }
 }
+
+
+
+/**
+ * Tags
+ */
+.tags {
+    li {
+        display: inine;
+        list-style-type: none;
+        float: left;
+    }
+}
