--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 <div class="post">
-
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
@@ -11,5 +10,15 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+</div>
 
+<div class="related-posts">
+  <h2>Related posts</h2>
+  <ul>
+    {% for post in site.related_posts limit:5 %}
+      <li>
+        <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
 </div>
