--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
-        <p>Hacked in Bucharest</p>
+        <img src="http://www.catb.org/hacker-emblem/glider.png" alt="hacker emblem" />
       </div>
 
       <div class="footer-col  footer-col-2">
