--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,5 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   {% feed_meta %}
+  <meta name="google-site-verification" content="1-bnMsg8ZPhhZ9zuL4v7412nngKzSpbJMxae_2TnRWg" />
 </head>
