--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,30 +2,16 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
-.site-title {
-    font-size: 26px;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
-}
-
 .site-nav {
-    float: right;
+    font-size: 80%;
     line-height: 56px;
+    float: right;
 
     .menu-icon {
         display: none;
@@ -40,52 +26,49 @@
             margin-left: 20px;
         }
     }
+}
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
+.profile #wrapper {
+    max-width: 640px;
+    margin: 0 auto;
+}
 
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
+.profile #header {
+    border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    position: relative;
+}
 
-            > svg {
-                width: 18px;
-                height: 15px;
+.profile #avatar {
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
 
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
+.profile h1 {
+    font-weight: 600;
+    letter-spacing: 0px;
+    font-size: 24px;
+    color: #222;
+}
 
-        .trigger {
-            clear: both;
-            display: none;
-        }
+.profile .description {
+    text-align: left;
+    font-weight: 300;
 
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
+    a {
+        text-decoration: underline;
 
-        .page-link {
-            display: block;
-            padding: 5px 10px;
+        &:hover {
+            color: $text-color;
+            text-decoration: none;
         }
     }
 }
-
 
 
 /**
@@ -175,6 +158,14 @@
 
     > li {
         margin-bottom: $spacing-unit;
+        clear: both;
+    }
+
+    img {
+        float: right;
+        margin: 5px 0;
+        max-width: 240px;
+        height: auto;
     }
 }
 
@@ -188,6 +179,11 @@
     font-size: 24px;
 }
 
+.paginator {
+    float: right;
+    clear: both;
+    margin-top: 40px;
+}
 
 
 /**
@@ -243,6 +239,15 @@
 
         @include media-query($on-laptop) {
             font-size: 18px;
+        }
+    }
+
+    a {
+        text-decoration: underline;
+
+        &:hover {
+            color: $text-color;
+            text-decoration: none;
         }
     }
 }
