--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 
   {% if page.url == "/" %}
   <div class="profile">
-      <section id="wrapper">
+      <section class="wrapper">
           <header id="header">
               <img id="avatar" src="/assets/taran.jpg">
               <h1>Alex Palcuie</h1>
