--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,44 +28,40 @@
     }
 }
 
-.profile #wrapper {
-    max-width: 640px;
-    margin: 0 auto;
-}
+.profile {
+    #header {
+        border-bottom: 1px solid #eee;
+        padding-bottom: 10px;
+        text-align: center;
+        position: relative;
+    }
 
-.profile #header {
-    border-bottom: 1px solid #eee;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    text-align: center;
-    position: relative;
-}
+    #avatar {
+        display: inline-block;
+        width: 160px;
+        height: 160px;
+        border-radius: 50%;
+        margin-bottom: $spacing-unit;
+    }
 
-.profile #avatar {
-    display: inline-block;
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
+    h1 {
+        font-weight: 600;
+        letter-spacing: 1px;
+        font-size: 24px;
+        color: #222;
+    }
 
-.profile h1 {
-    font-weight: 600;
-    letter-spacing: 0px;
-    font-size: 24px;
-    color: #222;
-}
+    .description {
+        text-align: left;
+        font-weight: 400;
 
-.profile .description {
-    text-align: left;
-    font-weight: 300;
+        a {
+            text-decoration: underline;
 
-    a {
-        text-decoration: underline;
-
-        &:hover {
-            color: $text-color;
-            text-decoration: none;
+            &:hover {
+                color: $text-color;
+                text-decoration: none;
+            }
         }
     }
 }
@@ -163,9 +159,13 @@
 
     img {
         float: right;
-        margin: 5px 0;
+        margin: 40px;
         max-width: 240px;
         height: auto;
+
+        @include media-query($on-palm) {
+            display: none;
+        }
     }
 }
 
