--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -154,8 +154,8 @@
 
     img {
         float: right;
-        margin: 40px;
-        max-width: 240px;
+        margin: 0px 0 40px 40px;
+        max-width: 300px;
         height: auto;
 
         @include media-query($on-palm) {
