--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="shortcut icon" href="/assets/favicon.ico" />
   {% feed_meta %}
   <meta name="google-site-verification" content="1-bnMsg8ZPhhZ9zuL4v7412nngKzSpbJMxae_2TnRWg" />
 </head>
