--- a/_includes/description.html
+++ b/_includes/description.html
@@ -9,8 +9,8 @@
     <p>Went to the <a href="/2010/04/olimpiada-nationala-de-informatica-oni.html">National</a> <a href="/2012/03/national-computer-science-olympiad-2012.html">Computer</a> <a href="/2013/03/oni-2012-olimpiada-nationala-de.html">Science</a> Olympiad and <a href="/2013/05/acadnet-leo-romania-conference-ubervu.html">Acadnet</a> National Computer Engineering Olympiad.</p>
     <p>Started working after high-school at uberVU, a social media analytics startup. We got acquired by <a href="http://hootsuite.com/">Hootsuite</a>. I've learnt a lot there about software engineering.</p>
     <p>I was a <a href="/2011/09/rojam-2011-national-romanian-scout.html">scout</a> and a <a href="/2012/10/leo-romania-friendship-camp.html">Leo</a>.</p>
-    <p>Avid reader. My <a href="https://getpocket.com/stats/2015/3d260aafbb">Pocket statistics</a> said I've read 92 books of articles last year and some more real on <a href="https://www.goodreads.com/user/show/8940497-alex-palcuie">Goodreads</a></p>
-    <p>Played football for 5 years and basketball for 7 years. Now, I run, swim and lift.</p>
+    <p>Avid reader. My <a href="https://getpocket.com/stats/2015/3d260aafbb">Pocket statistics</a> said I've read 92 books of articles last year and more real ones on <a href="https://www.goodreads.com/user/show/8940497-alex-palcuie">Goodreads</a>.</p>
+    <p>Played football for 5 years and basketball for 7 years. Now, I <a href="https://www.strava.com/athletes/3741856">run</a>, <a href="https://gyrosco.pe/palcu/sport/">swim</a> and <a href="https://www.fitocracy.com/profile/palcu/">lift</a>.</p>
     <p>Professional procrastinator and world class sleeper.</p>
     <p>Starting to blog daily...</p>
 </div>
