--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -240,3 +240,5 @@
         float: left;
     }
 }
+
+.badge { background-color: #e6efc2; border-radius: 3.75em; color: #56651a; display: inline-block; font-size: 0.75em; font-weight: 600; line-height: 1; padding: 0.4em 1.2em; }
