Add best articles to front page

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,7 +1,6 @@
 <div class="description">
     <p>Computer Science student at <a href="http://fmi.unibuc.ro">University of Bucharest.</a></p>
-    <p>Software engineer at the Romanian Government, where I'm technically responsible
-    for <a href="https://data.gov.ro">data.gov.ro</a>, the national open data portal.</p>
+    <p>Software engineer at the Romanian Government, where I'm technically responsible for <a href="https://data.gov.ro">data.gov.ro</a>, the national open data portal.</p>
     <p>Will join <a href="http://palantir.com/">Palantir</a> as a Forward Deployed Engineer next summer.</p>
     <p>Born in Ramnicu-Valcea, Romania. Now I live in Bucharest and will move to London.</p>
     <p>I preach open source in education at <a href="http://www.rosedu.org">ROSEdu</a>. I also teach and <a href="http://techblog.rosedu.org/cdl-2015.html">organize</a> projects.</p>
