--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,10 +24,10 @@
 
 .profile {
     #header {
-        border-bottom: 1px solid #eee;
-        padding-bottom: 10px;
+        border-bottom: 1px solid $grey-color-dark;
         text-align: center;
         position: relative;
+        padding-bottom: 5px;
     }
 
     #avatar {
@@ -35,7 +35,7 @@
         width: 160px;
         height: 160px;
         border-radius: 50%;
-        margin-bottom: $spacing-unit;
+        margin-bottom: $spacing-unit / 2;
     }
 
     h1 {
@@ -53,7 +53,7 @@
             text-decoration: underline;
         }
     }
-    margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit / 2;
 }
 
 
@@ -61,7 +61,6 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
 
@@ -170,6 +169,23 @@
     float: right;
     clear: both;
     margin-top: 40px;
+}
+
+.home {
+    i {
+        float: right;
+        font-size: 80%;
+    }
+
+    hr {
+        margin-bottom: $spacing-unit / 2;
+        margin-top: -5px;
+        border: 0.5px solid $grey-color-dark;
+    }
+}
+
+.page-content .post, .page-content .home {
+    border-bottom: 1px solid $grey-color-dark;
 }
 
 
