--- a/_includes/list-article.html
+++ b/_includes/list-article.html
@@ -19,7 +19,7 @@
 
   <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
   {% for tag in post.tags %}
-    <code class="post-meta"><a href="/tags#{{ tag }}-ref">{{ tag }}</a></code>
+    <code class="post-meta"><a href="/tags#{{ tag | slugify }}-ref">{{ tag }}</a></code>
   {% endfor %}
 
   <h2>
