--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,11 +26,11 @@
   {% if page.url == "/" %}
   <div class="profile">
       <section class="wrapper">
-          <header id="header">
-              <img id="avatar" src="/assets/taran.jpg">
+          <div id="header">
+              <img id="avatar" src="/assets/taran.jpg" alt="Alex Palcuie">
               <h1>Alex Palcuie</h1>
               {% include description.html %}
-          </header>
+          </div>
       </section>
   </div>
   {% endif %}
