--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,34 @@
   <link rel="shortcut icon" href="/assets/favicon.ico" />
   {% feed_meta %}
   <meta name="google-site-verification" content="1-bnMsg8ZPhhZ9zuL4v7412nngKzSpbJMxae_2TnRWg" />
+  <style>
+    /* Description */
+    #description.before-click:after {
+      position: absolute;
+      bottom: 0;
+      height: 80%;
+      width: 100%;
+      content: "";
+      background: linear-gradient(to top,
+         rgba(255,255,255, 0.5) 0%,
+         rgba(255,255,255, 0) 60%
+      );
+      pointer-events: none; /* so the text is still selectable */
+      margin-bottom: 40px; /* leave space for the button */
+    }
+
+    #more-description {
+        opacity: 0;
+        height: 0;
+
+        .show-description {
+            opacity: 1;
+            height: auto;
+            transition: opacity 0.8s ease-out;
+            -ms-transition: opacity 0.8s ease-out;
+            -moz-transition: opacity 0.8s ease-out;
+            -webkit-transition: opacity 0.8s ease-out;
+        }​
+    }
+  </style>
 </head>
