--- a/_includes/description.html
+++ b/_includes/description.html
@@ -24,7 +24,7 @@
         event.preventDefault();
 
         var more_description = document.getElementById('more-description');
-        more_description.className = 'show-description';
+        more_description.className = 'show';
 
         var button = document.getElementById('read-more-button');
         button.style.display = 'none'
