--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,15 +30,15 @@
     #more-description {
         opacity: 0;
         height: 0;
-
-        .show-description {
-            opacity: 1;
-            height: auto;
-            transition: opacity 0.8s ease-out;
-            -ms-transition: opacity 0.8s ease-out;
-            -moz-transition: opacity 0.8s ease-out;
-            -webkit-transition: opacity 0.8s ease-out;
-        }​
     }
+
+    #more-description.show {
+        opacity: 1;
+        height: auto;
+        transition: opacity 0.8s ease-out;
+        -ms-transition: opacity 0.8s ease-out;
+        -moz-transition: opacity 0.8s ease-out;
+        -webkit-transition: opacity 0.8s ease-out;
+    }​
   </style>
 </head>
