Hide URLs in the background

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
     #more-description {
         opacity: 0;
         height: 0;
+        overflow: hidden;
     }
 
     #more-description.show {
