--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,15 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }} | {{ page.content | number_of_words }} words</p>
+    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }} | {{ page.content | number_of_words }} words |
+      {% for tag in page.tags %}
+        <code class="post-meta"><a href="/tags#{{ tag | slugify }}-ref">{{ tag }}</a></code>
+      {% endfor %}
+    </p>
   </header>
 
   <article class="post-content">
     {{ content }}
   </article>
+
 </div>
