--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   {% seo %}
+  <meta property="article:author" content="https://www.facebook.com/palcuiealex" />
 
   {% feed_meta %}
 
