--- a/_includes/description.html
+++ b/_includes/description.html
@@ -27,7 +27,7 @@
         more_description.className = 'show';
 
         var button = document.getElementById('read-more-button');
-        button.style.display = 'none'
+        button.style.display = 'none';
 
         var description = document.getElementById('description');
         description.className = '';
