--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  {% seo %}
-  <meta property="article:author" content="https://www.facebook.com/palcuiealex" />
+  {% include seo.html %}
 
   {% feed_meta %}
 
