--- a/_includes/list-article.html
+++ b/_includes/list-article.html
@@ -31,8 +31,8 @@
   {% endfor %}
 
   <h2>
-  {% if post.custom_link %}
-    <a class="post-link" href="{{ post.custom_link }}">{{ post.title }}</a>
+  {% if post.seo_url %}
+    <a class="post-link" href="{{ post.seo_url }}">{{ post.title }}</a>
   {% else %}
     <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
   {% endif %}
