--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 
+  {% capture head %}
   {% include head.html %}
+  {% endcapture %}{{ head | strip_newlines }}
 
   <body>
 
+    {% capture header %}
     {% include header.html %}
+    {% endcapture %}{{ header | strip_newlines }}
 
     <div class="page-content">
       <div class="wrapper">
+        {% capture header %}
         {{ content }}
+        {% endcapture %}{{ content | strip_newlines }}
       </div>
     </div>
 
