--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -280,3 +280,33 @@
 .inline {
     display: inline;
 }
+
+/* Description */
+#description.before-click:after {
+  position: absolute;
+  bottom: 0;
+  height: 80%;
+  width: 100%;
+  content: "";
+  background: linear-gradient(to top,
+     rgba(255,255,255, 0.5) 0%,
+     rgba(255,255,255, 0) 60%
+  );
+  pointer-events: none; /* so the text is still selectable */
+  margin-bottom: 40px; /* leave space for the button */
+}
+
+#more-description {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+
+    &.show {
+        opacity: 1;
+        height: auto;
+        transition: opacity 0.8s ease-out;
+        -ms-transition: opacity 0.8s ease-out;
+        -moz-transition: opacity 0.8s ease-out;
+        -webkit-transition: opacity 0.8s ease-out;
+    }
+}
