--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
-        <img src="/assets/glider.png" alt="hacker emblem" height="180" width="180" />
+        <img src="/assets/glider_small.png" alt="hacker emblem" height="180" width="180" />
       </div>
 
       <div class="footer-col  footer-col-2">
