--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -99,6 +99,7 @@
 
 {% if seo_page_title %}
   <meta property="og:title" content="{{ seo_page_title }}" />
+  <title>{{ seo_page_title }}</title>
 {% endif %}
 
 {% if seo_description %}
