--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="display-on-mobile">
             <a href="https://twitter.com/{{ site.twitter_username }}">
               <span class="icon icon-twitter">
                 <svg viewBox="0 0 512 512">
