--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
 
   <link rel="shortcut icon" href="/assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}?cache={{ site.time | date: '%s' }}">
 </head>
