Make padding for img slightly more

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -226,8 +226,7 @@
  */
 .post {
   img {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 20px 40px;
   }
 
   .tr-caption-container {
