--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,7 +77,10 @@
   </div>
 </footer>
 
+{% if page.url == "/" %}
 <script src="/assets/script.js">
+{% endif %}
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
