--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -78,7 +78,7 @@
 </footer>
 
 {% if page.url == "/" %}
-<script src="/assets/script.js">
+<script src="/assets/script.js?bust={{ site.time | date: '%s' }}">
 {% endif %}
 
 <script>
