--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,7 +71,7 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
-        <p class="text"><a height="15" width="80" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" src="/assets/cc.png" /></a></p>
+        <p class="text"><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img height="15" width="80" alt="Creative Commons License" src="/assets/cc.png" /></a></p>
       </div>
     </div>
   </div>
