--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -43,20 +43,6 @@
   {% assign seo_description = seo_description | markdownify | strip_html | strip_newlines | escape_once | truncate: 155 %}
 {% endif %}
 
-{% assign seo_author = page.author | default: page.authors[0] | default: site.author %}
-{% if seo_author %}
-  {% if seo_author.twitter %}
-    {% assign seo_author_twitter = seo_author.twitter %}
-  {% else %}
-    {% if site.data.authors and site.data.authors[seo_author] %}
-      {% assign seo_author_twitter = site.data.authors[seo_author].twitter  %}
-    {% else %}
-      {% assign seo_author_twitter = seo_author  %}
-    {% endif %}
-  {% endif %}
-  {% assign seo_author_twitter = seo_author_twitter | replace:"@","" %}
-{% endif %}
-
 {% if page.seo and page.seo.type %}
     {% assign seo_type = page.seo.type %}
 {% elsif seo_homepage_or_about %}
@@ -122,11 +108,8 @@
     <meta name="twitter:card" content="summary" />
   {% endif %}
 
-  <meta name="twitter:site" content="@{{ site.twitter.username | replace:"@","" }}" />
-
-  {% if seo_author_twitter %}
-    <meta name="twitter:creator" content="@{{ seo_author_twitter }}" />
-  {% endif %}
+  <meta name="twitter:site" content="@AlexPalcuie" />
+  <meta name="twitter:creator" content="@AlexPalcuie" />
 {% endif %}
 
 {% if site.facebook %}
