Spacing on front page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -163,6 +163,10 @@
         }
     }
 
+    h3 {
+        margin: ($spacing-unit/3) 0;
+    }
+
     img {
         float: right;
         margin: 0px 0 40px 40px;
