--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -129,39 +129,18 @@
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
-
-{% if seo_type %}
     "@type": {{ seo_type | jsonify }},
-{% endif %}
-
-{% if seo_name %}
     "name": {{ seo_name | jsonify }},
-{% endif %}
-
-{% if seo_page_title %}
     "headline": {{ seo_page_title | jsonify }},
-{% endif %}
-
-{% if seo_page_image %}
     "image": {{ seo_page_image | jsonify }},
-{% endif %}
-
-{% if page.date %}
-    "datePublished": {{ page.date | date_to_xmlschema | jsonify }},
-{% endif %}
-
+{% if page.date %}"datePublished": {{ page.date | date_to_xmlschema | jsonify }},{% endif %}
 {% if seo_description and page.no_description == null %}
     "description": {{ seo_description | jsonify }},
 {% endif %}
-
 {% if seo_site_logo %}
     "logo": {{ seo_site_logo | jsonify }},
 {% endif %}
-
-{% if seo_links %}
     "sameAs": {{ seo_links | jsonify }},
-{% endif %}
-
     "url": {{ seo_url | jsonify }}
   }
 </script>
