--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -137,7 +137,7 @@
     "author": {
       "@type": "Person",
       "name": "Alex Palcuie",
-      "image": "https://blog.palcu.ro/assets/alex_palcuie.png",
+      "image": {{ page.my_face | prepend: site.url }},
       "jobTitle": "Software Engineer",
       "nationality": "Romania",
       "sameAs": {{ seo_links | jsonify }}
