--- a/_includes/list-article.html
+++ b/_includes/list-article.html
@@ -1,8 +1,16 @@
-<li>
+<li itemprop="BlogPosting" itemscope itemtype="http://schema.org/BlogPosting">
+  <meta itemprop="author" content="Alex Palcuie" />
+  <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+    <meta itemprop="name" content="Palcu's Blog" />
+    <meta itemprop="logo" content="{{ site.logo | prepend: site.url }}" />
+  </div>
+  <meta itemprop="dateModified" content="{{ post.date }}">
+
+  {% assign post_image = site.logo %}
+
   {% if post.image %}
-
     <img src="{{ post.image.src }}" alt="{{ post.image.alt }}" />
-
+    {% assign post_image = post.image.src %}
   {% else %}
 
     {% assign foundImage = 0 %}
@@ -16,6 +24,7 @@
               {% for tag in tags %}
                 {% if tag contains 'src' %}
                   <img {{ tag }} />
+                  {% assign post_image = tag %}
                 {% endif %}
               {% endfor %}
               {% assign foundImage = 1 %}
@@ -25,18 +34,26 @@
 
   {% endif %}
 
-  <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+  <meta itemprop="image" content="{{ post_image | prepend: site.url }}" />
+
+  <span class="post-meta" itemprop="datePublished">{{ post.date | date: "%b %-d, %Y" }}</span>
   {% for tag in post.tags %}
     <code class="post-meta"><a href="/tags#{{ tag | slugify }}-ref">{{ tag }}</a></code>
   {% endfor %}
 
-  <h3>
   {% if post.seo_url %}
-    <a class="post-link" href="{{ post.seo_url }}">{{ post.title }}</a>
+    {% assign url = post.seo_url %}
   {% else %}
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+    {% assign url = post.url | prepend: site.url %}
   {% endif %}
+  <h3>
+    <a itemprop="mainEntityOfPage" class="post-link" href="{{ url }}">{{ post.title }}</a>
   </h3>
 
-  {{ post.excerpt | markdownify | strip_html | truncate: include.chars-max }}
+  {% assign content = post.excerpt | markdownify | strip_html %}
+  <span itemprop="description">
+    {{ content | truncate: include.chars-max }}
+  </span>
+
+  <meta itemprop="headline" content="{{ content | truncate: 110 }}" />
 </li>
