--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <html lang="{{ lang }}">
   {% include head.html %}
 
-  <body>
+  <body itemscope itemtype="http://schema.org/BlogPosts">
 
     {% include header.html %}
 
