Break out of the loop

--- a/_includes/list-article.html
+++ b/_includes/list-article.html
@@ -28,6 +28,8 @@
                 {% endif %}
               {% endfor %}
               {% assign foundImage = 1 %}
+          {% else %}
+            {% break %}
           {% endif %}
       {% endif %}
     {% endfor %}
