--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -2,10 +2,11 @@
   {% assign seo_homepage_or_about = true %}
 {% endif %}
 
-{% if page.seo_url %}
-  {% assign seo_url = page.seo_url %}
+
+{% if page.custom_url %}
+  {% assign custom_url = page.custom_url %}
 {% else %}
-  {% assign seo_url = page.url | prepend: site.url %}
+  {% assign custom_url = page.url | prepend: site.url %}
 {% endif %}
 
 
@@ -62,7 +63,7 @@
 {% if page.image %}
     {% assign seo_page_image = page.image.src | prepend: site.url | escape %}
 {% else %}
-    {% assign seo_page_image = '/assets/glider.png' | prepend: site.url | escape %}
+    {% assign seo_page_image = page.logo | prepend: site.url | escape %}
 {% endif %}
 
 {% if seo_tag.title and seo_title %}
@@ -79,9 +80,9 @@
   <meta property="og:description" content="{{ seo_description }}" />
 {% endif %}
 
-{% if seo_url %}
-  <link rel="canonical" href="{{ seo_url }}" />
-  <meta property="og:url" content="{{ seo_url }}" />
+{% if custom_url %}
+  <link rel="canonical" href="{{ custom_url }}" />
+  <meta property="og:url" content="{{ custom_url }}" />
 {% endif %}
 
 {% if seo_site_title %}
@@ -133,11 +134,11 @@
 {% if seo_description and page.no_description == null %}
     "description": {{ seo_description | jsonify }},
 {% endif %}
-    "url": {{ seo_url | jsonify }},
+    "url": {{ custom_url | jsonify }},
     "author": {
       "@type": "Person",
       "name": "Alex Palcuie",
-      "image": {{ page.my_face | prepend: site.url }},
+      "image": {{ page.my_face | prepend: site.url | jsonify }},
       "jobTitle": "Software Engineer",
       "nationality": "Romania",
       "sameAs": {{ seo_links | jsonify }}
