Remove hardcoded string

--- a/_includes/list-article.html
+++ b/_includes/list-article.html
@@ -1,6 +1,6 @@
 <li itemprop="BlogPosting" itemscope itemtype="http://schema.org/BlogPosting">
   <div itemprop="author" itemscope itemtype="http://schema.org/Person" />
-    <meta content="Alex Palcuie" itemprop="name" />
+    <meta content="{{ site.author }}" itemprop="name" />
     <meta content="{{ site.my_face | prepend: site.url }}" itemprop="image" />
   </div>
 
