--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
   <div class="profile">
       <section class="wrapper">
           <div id="header">
-              <img id="avatar" src="/assets/alex_palcuie.png" alt="Alex Palcuie">
+              <img id="avatar" src="/assets/alex_palcuie.png" alt="{{ site.author }}">
               <h1>Alex Palcuie</h1>
               {% include description.html %}
           </div>
