--- a/_includes/list-article.html
+++ b/_includes/list-article.html
@@ -1,5 +1,5 @@
 <li itemprop="BlogPosting" itemscope itemtype="http://schema.org/BlogPosting">
-  <div itemprop="author" itemscope itemtype="http://schema.org/Person" />
+  <div itemprop="author" itemscope itemtype="http://schema.org/Person">
     <meta content="{{ site.author }}" itemprop="name" />
     <meta content="{{ site.my_face | prepend: site.url }}" itemprop="image" />
   </div>
