--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -11,7 +11,11 @@
 
 
 {% assign site_title = site.title %}
-{% assign page_title = page.title | default: site_title | markdownify | strip_html | strip_newlines | escape_once %}
+{% if page.title %}
+  {% assign page_title = page.title | markdownify | strip_html | strip_newlines | escape_once %}
+{% else %}
+  {% assign page_title = site.title %}
+{% endif %}
 
 
 {% assign seo_description = page.description | default: page.excerpt | default: site.description %}
