--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -12,7 +12,7 @@
 
 {% assign site_title = site.title %}
 {% if page.title %}
-  {% assign page_title = page.title | markdownify | strip_html | strip_newlines | escape_once %}
+  {% assign page_title = page.title | strip_html | strip_newlines | escape_once %}
 {% else %}
   {% assign page_title = site.title %}
 {% endif %}
@@ -20,7 +20,7 @@
 
 {% assign seo_description = page.description | default: page.excerpt | default: site.description %}
 {% if seo_description %}
-  {% assign seo_description = seo_description | markdownify | strip_html | strip_newlines | escape_once | truncate: 155 %}
+  {% assign seo_description = seo_description | strip_html | strip_newlines | escape_once | truncate: 155 %}
 {% endif %}
 
 
