--- a/_includes/description.html
+++ b/_includes/description.html
@@ -15,6 +15,6 @@
         <p>Avid reader. My <a href="https://getpocket.com/stats/2015/3d260aafbb">Pocket statistics</a> said I've read 92 books of articles last year and more real ones on <a href="https://www.goodreads.com/user/show/8940497-alex-palcuie">Goodreads</a>.</p>
         <p>Played football for 5 years and basketball for 7 years. Now, I <a href="https://www.strava.com/athletes/3741856">run</a>, <a href="https://gyrosco.pe/palcu/sport/">swim</a> and <a href="https://www.fitocracy.com/profile/palcu/">lift</a>.</p>
         <p>Professional <b>procrastinator</b> and world class <b>sleeper</b>.</p>
-        <p>Starting to blog daily...</p>
+        <p>Starting to blog weekly.</p>
     </div>
 </div>
