--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,20 +1,19 @@
 <div id="description" class="before-click">
-    <p><b>Software engineer</b> at the <b>Romanian Government</b>, where I'm technically responsible for <a href="https://data.gov.ro">data.gov.ro</a>, the national <b>open data</b> portal.</p>
-    <p>Will join <a href="http://palantir.com/">Palantir</a> as a <b>Forward Deployed Engineer</b> next summer.</p>
-    <p>I preach <b>open source</b> in education at <a href="http://www.rosedu.org">ROSEdu</a>. I also teach and <a href="http://techblog.rosedu.org/cdl-2015.html">organize</a> projects.</p>
+    <p>Will join <a href="http://palantir.com/">Palantir</a> as a Forward Deployed Engineer this summer.</p>
+    <p>I was a software engineer at the Romanian Government, where I was technically responsible for <a href="https://data.gov.ro">data.gov.ro</a>, the national open data portal. Everything I did was <a href="http://github.com/govro/">open source</a>.</p>
+    <p>I preached open source in education at <a href="http://www.rosedu.org">ROSEdu</a>. I also taught and <a href="http://techblog.rosedu.org/cdl-2015.html">organized</a> projects as a volunteer.</p>
     <p>Went to the <a href="/2010/04/olimpiada-nationala-de-informatica-oni.html">National</a> <a href="/2012/03/national-computer-science-olympiad-2012.html">Computer</a> <a href="/2013/03/oni-2012-olimpiada-nationala-de.html">Science</a> Olympiad and <a href="/2013/05/acadnet-leo-romania-conference-ubervu.html">Acadnet</a> National Computer Engineering Olympiad.</p>
 
     <p id="read-more-button" onclick="expandDescription()"><a href="#">Read more...</a></p>
 
     <div id="more-description">
-        <p><b>Computer Science</b> student at the <a href="http://fmi.unibuc.ro">University of Bucharest.</a></p>
-        <p>Born in <b>Ramnicu-Valcea</b>, <b>Romania</b>. Now I live in <b>Bucharest</b> and will move to <b>London</b>.</p>
-        <p>Participated in high-school at <a href="/2011/09/summer-holiday-2011-infoeducatie.html">InfoEducatie</a>, the most awesome <a href="/2015/08/infoeducatie-2015.html">programming</a> camp in the world.</p>
-        <p>Started working after high-school at <b>uberVU</b>, a social media analytics startup. We got acquired by <a href="http://hootsuite.com/">Hootsuite</a>. I've learnt a lot there about software engineering.</p>
+        <p>Graduated in Computer Science and Mathematics at <a href="http://fmi.unibuc.ro">University of Bucharest.</a></p>
+        <p>Born in Ramnicu-Valcea, Romania. Now I live in London, but I enjoyed Bucharest.</p>
+        <p>Participated as a high-school student as an organizer at <a href="/2011/09/summer-holiday-2011-infoeducatie.html">InfoEducatie</a>, the most awesome <a href="/2015/08/infoeducatie-2015.html">programming</a> camp in the world.</p>
+        <p>Started working after high-school at uberVU, a social media analytics startup. We got acquired by <a href="http://hootsuite.com/">Hootsuite</a>. I've learned a lot there about software engineering.</p>
+        <p>Avid reader. My <a href="https://getpocket.com/stats/2015/3d260aafbb">Pocket statistics</a> said I've read 92 books of articles last year. I also have a list of real ones I enjoyed on <a href="https://www.goodreads.com/user/show/8940497-alex-palcuie">Goodreads</a>.</p>
         <p>I was a <a href="/2011/09/rojam-2011-national-romanian-scout.html">scout</a> and a <a href="/2012/10/leo-romania-friendship-camp.html">Leo</a>.</p>
-        <p>Avid reader. My <a href="https://getpocket.com/stats/2015/3d260aafbb">Pocket statistics</a> said I've read 92 books of articles last year and more real ones on <a href="https://www.goodreads.com/user/show/8940497-alex-palcuie">Goodreads</a>.</p>
-        <p>Played football for 5 years and basketball for 7 years. Now, I <a href="https://www.strava.com/athletes/3741856">run</a>, <a href="https://gyrosco.pe/palcu/sport/">swim</a> and <a href="https://www.fitocracy.com/profile/palcu/">lift</a>.</p>
-        <p>Professional <b>procrastinator</b> and world class <b>sleeper</b>.</p>
-        <p>Starting to blog weekly.</p>
+        <p>Played football for 5 years and basketball for 7 years. Now I <a href="https://www.strava.com/athletes/3741856">run</a>.
+        <p>Professional procrastinator and world class sleeper.</p>
     </div>
 </div>
