--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,7 +1,6 @@
 <div id="description" class="before-click">
-    <p>Software Engineer / Site Reliability Engineer at Google</p>
-    <p>Worked as a Forward Deployed Engineer at <a href="http://palantir.com/">Palantir</a>.</p>
-    <p>I was a software engineer at the Romanian Government, where I was technically responsible for <a href="https://data.gov.ro">data.gov.ro</a>, the national open data portal. Everything I did was <a href="http://github.com/govro/">open source</a>.</p>
+    <p>Software Engineer - Site Reliability Engineering at Google.</p>
+    <p>Worked as a forward deployed engineer at <a href="http://palantir.com/">Palantir</a>. I was also a software engineer at the Romanian Government, where I was technically responsible for <a href="https://data.gov.ro">data.gov.ro</a>, the national open data portal. Everything I did was <a href="http://github.com/govro/">open source</a>.</p>
     <p>I preached open source in education at <a href="http://www.rosedu.org">ROSEdu</a>. I also taught and <a href="http://techblog.rosedu.org/cdl-2015.html">organized</a> projects as a volunteer.</p>
     <p>Went to the <a href="/2010/04/olimpiada-nationala-de-informatica-oni.html">National</a> <a href="/2012/03/national-computer-science-olympiad-2012.html">Computer</a> <a href="/2013/03/oni-2012-olimpiada-nationala-de.html">Science</a> Olympiad and <a href="/2013/05/acadnet-leo-romania-conference-ubervu.html">Acadnet</a> National Computer Engineering Olympiad.</p>
 
