--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,5 +1,5 @@
 <div id="description" class="before-click">
-    <p>Site reliability engineer at Google Cloud where I try to keep Compute Engine at 99.95% uptime.</p>
+    <p>Site reliability engineer at Google Cloud where I sometimes get paged because Compute Engine is unhappy.</p>
     <p>Worked as a forward deployed engineer at <a href="http://palantir.com/">Palantir Technologies</a>. I was a software engineer at the Romanian Government, where I was technically responsible for <a href="https://data.gov.ro">data.gov.ro</a>, the national open data portal.</p>
     <p>Advocated for open source in education at <a href="http://www.rosedu.org">ROSEdu</a>, where I taught and <a href="http://techblog.rosedu.org/cdl-2015.html">organized</a> projects as a volunteer.</p>
     <p>Went to the <a href="/2010/04/olimpiada-nationala-de-informatica-oni.html">National</a> <a href="/2012/03/national-computer-science-olympiad-2012.html">Computer</a> <a href="/2013/03/oni-2012-olimpiada-nationala-de.html">Science</a> Olympiad and <a href="/2013/05/acadnet-leo-romania-conference-ubervu.html">Acadnet</a> National Computer Engineering Olympiad.</p>
