--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
   <div class="wrapper">
     <nav class="site-nav">
       <div class="trigger">
-          <a class="page-link" href="/">Home</a>
+          <a class="page-link" href="/">🏠 Home</a>
+          <a class="page-link" href="/about">🤓 About</a>
           {% for page in site.pages %}
             {% if page.title %}
             <a class="page-link" href="{{ page.url | prepend: site.url }}">{{ page.title }}</a>
